testsuite/tests/patsyn/should_fail/T11265.hs
{-# LANGUAGE PatternSynonyms, DataKinds #-}

pattern A = True

class    F a
instance F A
