testsuite/tests/patsyn/should_fail/T11265.stderr

T11265.hs:6:12: error:
    • Pattern synonym ‘A’ cannot be used here
        (pattern synonyms cannot be promoted)
    • In the first argument of ‘F’, namely ‘A’
      In the instance declaration for ‘F A’
